# meeting-execution-agent

./: -Uri  .gitignore  DEVELOPMENT_ROADMAP.md  PROJECT_OVERVIEW.md  README.md
backend/: .env.example  alembic.ini  celerybeat-schedule.bak  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202605200001_create_core_tables.py  202605210001_add_analysis_drafts.py  202605220001_add_meeting_chunks.py  202605220002_add_execution_draft_confirmation.py  202605220003_add_external_task_mappings.py  202605230001_add_reminders.py  202605310001_add_audio_segments.py
backend/app/: main.py
backend/app/agents/: bootstrap_graph.py  meeting_analysis_graph.py  meeting_execution_graph.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routers/: __init__.py  action_items.py  analysis_drafts.py  debug.py  health.py  integrations.py  meetings.py  qa.py  reminders.py  workflows.py
backend/app/core/: config.py  logger.py  redis_client.py
backend/app/db/: session.py
backend/app/evals/: __init__.py  dataset_loader.py  evaluators.py  langsmith_sync.py  run_langsmith_evals.py  scoring.py  targets.py
backend/app/evals/datasets/: meeting_eval_cases.jsonl
backend/app/integrations/: __init__.py  linear.py  tasks.py
backend/app/llm/: __init__.py  dashscope.py
backend/app/models/: __init__.py  analysis.py  audio.py  chunk.py  integration.py  meeting.py  reminder.py  workflow.py
backend/app/retrieval/: __init__.py  qdrant_store.py
backend/app/schemas/: analysis.py  meeting.py  qa.py  reminder.py  workflow.py
backend/app/services/: __init__.py  analysis_drafts.py  clarification_rules.py  execution_drafts.py  meeting_content.py  meeting_indexing.py  meeting_qa.py  reminders.py  task_dispatch.py  workflow_lifecycle.py  workflow_resume.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_analysis_schema.py  test_bootstrap_graph.py  test_clarification_rules.py  test_config.py  test_dashscope.py  test_desktop_api.py  test_eval_dataset.py  test_eval_scoring.py  test_eval_targets.py  test_execution_draft_api.py  test_execution_drafts.py  test_health_api.py  test_langsmith_sync.py  test_linear_adapter.py  test_logger.py  test_meeting_analyze_api.py  test_meeting_content.py  test_meeting_delete_api.py  test_meeting_execution_graph.py  test_meeting_indexing.py  test_meeting_qa.py  test_models.py  test_qdrant_store.py  test_reminders.py  test_task_dispatch.py  test_worker_tasks.py
desktop/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+22 files in other folders)
