# 构建系统配置：当前后端使用 setuptools 作为打包工具。
[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

# 项目元信息：定义后端包名、版本、Python 版本约束和说明文档来源。
[project]
name = "meeting-execution-agent-backend"
version = "0.1.0"
description = "FastAPI backend for Meeting Execution Agent."
readme = "../DEVELOPMENT_ROADMAP.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    # Web API 与配置：FastAPI 服务、ASGI 服务器、数据校验和环境变量配置。
    "fastapi>=0.136,<0.137",
    "uvicorn[standard]>=0.45,<0.46",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",

    # MySQL 与迁移：异步 ORM、数据库迁移、MySQL 驱动和认证加密支持。
    "sqlalchemy[asyncio]>=2.0.49,<2.1",
    "alembic>=1.18,<2",
    "aiomysql>=0.3,<0.4",
    "pymysql>=1.1,<2",
    "cryptography>=46,<47",

    # Redis 与异步任务：Redis 用作缓存、队列 broker，Celery 负责后台任务。
    "redis>=6.4,<7",
    "celery[redis]>=5.6,<5.7",

    # Qdrant 向量检索：保存会议 chunk、决策和待办的向量索引。
    "qdrant-client>=1.18,<2",

    # Agent / LLM：LangChain 保持当前版本，LangGraph 固定在兼容范围内，OpenAI SDK 负责模型调用。
    "langchain==1.2.15",
    "langchain-text-splitters>=1.1,<1.2",
    "langgraph>=1.1.5,<1.2.0",
    "langsmith>=0.7,<0.8",
    "openai>=2.37,<3",

    # HTTP、鉴权、日志与重试：外部系统集成、OAuth、结构化日志和失败重试。
    "httpx>=0.28,<0.29",
    "authlib>=1.7,<2",
    "python-dotenv>=1.2,<2",
    "structlog>=25.5,<26",
    "tenacity>=9.1,<10",

    # 文件上传、文档解析与 SSE：会议文件接收、PDF/Word 解析、token 计算和事件流。
    "python-multipart>=0.0.29,<0.1",
    "aiofiles>=25.1,<26",
    "pypdf>=6.10,<7",
    "python-docx>=1.2,<2",
    "tiktoken>=0.13,<0.14",
    "sse-starlette>=3.4,<4",
]

# 可选开发依赖：通过 pip install -e ".[dev]" 安装测试、Mock、Lint 和类型检查工具。
[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "respx>=0.23,<0.24",
    "ruff>=0.15,<0.16",
    "mypy>=2.1,<3",
]

# setuptools 包发现配置：从 backend 根目录发现 app 包及其子包。
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# pytest 配置：指定测试目录、导入路径、异步测试模式和默认输出简洁模式。
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-q"

# Ruff 配置：统一 Python 目标版本和行宽。
[tool.ruff]
target-version = "py312"
line-length = 100

# Ruff lint 规则：启用常见错误、导入排序、bugbear 和 pyupgrade 检查。
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

# mypy 配置：在不过度阻塞第三方库类型缺失的前提下检查项目代码类型。
[tool.mypy]
python_version = "3.12"
plugins = []
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_optional = true
